<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jounal"
    tools:context=".login.ui.LoginActivity">

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="267dp"
        android:layout_height="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="145dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tEtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="215dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tEtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"

                />


        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="34dp"

        android:layout_marginTop="144dp"
        android:gravity="center"
        android:text="@string/text_slogan"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.gms.common.SignInButton
        android:id="@+id/bSignInGoogle"
        android:layout_width="107dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:width="0dp"
        android:background="@drawable/b_sign_in_background"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <LinearLayout
        android:id="@+id/llButton"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/tv_slogan"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:width="0dp"
            android:background="@drawable/b_sign_in_background"

            android:text="@string/action_sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bSignUp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:width="0dp"
            android:background="@drawable/b_sign_in_background"
            android:text="@string/action_sign_up"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="@string/tvor"
        android:textAppearance="@android:style/TextAppearance.Holo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogin"
        app:layout_constraintVertical_bias="0.287" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slogan" />


</android.support.constraint.ConstraintLayout>